# a14

./: README.md  prd.md  pyproject.toml
aud2studio/: __init__.py  cond.py  config.py  data.py  infer.py  mel.py  metrics.py  model.py  trainer.py  utils.py
constraints/: py39.txt
examples/: config.yaml
scripts/: make_manifest_from_folder.py  make_synth_pairs.py  prepare_rirs.py
tests/: test_smoke.py
